# canvas-mcp

./: .gitignore  README.md  pyproject.toml  sample.env
examples/: create_course_modules.py  create_course_pages.py  create_course_structure.py
src/canvas_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
tests/: __init__.py  test_client.py  test_server.py
